refactor(libCredits): redesign model with Document types and extract lang package